--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tree-sitter-cg",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "tree-sitter grammar of VISL-CG",
   "main": "index.js",
   "directories": {
@@ -24,5 +24,8 @@
   "bugs": {
     "url": "https://github.com/mr-martian/tree-sitter-apertium/issues"
   },
+    "dependencies": {
+        "nan": "^2.8.0"
+    },
   "homepage": "https://github.com/mr-martian/tree-sitter-apertium#readme"
 }
